# envify

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: poetry-pypi.yml  python-package.yml  python-publish.yml
env_parser/: __init__.py  constants.py  errors.py  main.py
env_parser/models/: config.py
env_parser/utils/: load_envs.py  load_yaml.py
envify/: constants.py
envify/models/: config.py
tests/: multi_env.yml  multiple_environs.py  parsing_test.py  test.yml
tests/results/: parsing_test.py
tests/templates/: multi_env.yml  multi_env_active_error.yml  multi_env_active_undeclared.yml  multi_env_duplicate.yml  multi_env_invalid_environ.yml  single_env_duplicate.yml
